<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ours.thesuperdarkfour.DimensionsActivity" >

    <Button
        android:id="@+id/button_dim1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_buttonDim1"
        android:onClick="showPowers" />
    
    <TextView
        android:id="@+id/textView_dim1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dim1"
        android:layout_centerHorizontal="true"
        android:text="@string/text_defaultDims" />
    
    <Button
        android:id="@+id/button_dim2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_dim1"
        android:layout_below="@+id/textView_dim1"
        android:text="@string/text_buttonDim2" />
    
    <TextView
        android:id="@+id/textView_dim2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dim2"
        android:layout_centerHorizontal="true"
        android:text="@string/text_defaultDims" />

    <Button
        android:id="@+id/button_dim3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button_dim1"
        android:layout_below="@+id/textView_dim2"
        android:text="@string/text_buttonDim3" />
    
    <TextView
        android:id="@+id/textView_dim3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dim3"
        android:layout_centerHorizontal="true"
        android:text="@string/text_defaultDims" />

    <Button
        android:id="@+id/button_dim4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_dim1"
        android:layout_below="@+id/textView_dim3"
        android:text="@string/text_buttonDim4" />
    
    <TextView
        android:id="@+id/textView_dim4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dim4"
        android:layout_centerHorizontal="true"
        android:text="@string/text_defaultDims" />

    <Button
        android:id="@+id/button_dim5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_dim1"
        android:layout_below="@+id/textView_dim4"
        android:text="@string/text_buttonDim5" />

    <TextView
        android:id="@+id/textView_dim5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_dim5"
        android:layout_centerHorizontal="true"
        android:text="@string/text_defaultDims" />

</RelativeLayout>
