<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ours.thesuperdarkfour.MainActivity" >

    <Button
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="制定计划"
    	android:onClick="toPower" />

<RelativeLayout 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content">
    <Button
        android:id="@+id/button_userInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/userInfo_buttonText" 
        android:onClick="toUser"/>

    <Button
        android:id="@+id/button_dimensions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_userInfo"
        android:layout_below="@+id/button_userInfo"
        android:text="@string/text_buttonDimensions" 
        android:onClick="showDimensions" />

    <Button
        android:id="@+id/button_currPlan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_userInfo"
        android:layout_below="@+id/button_dimensions"
        android:text="@string/text_buttonCurrPlan" />
    
    <Button
        android:id="@+id/button_others"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_userInfo"
        android:layout_below="@+id/button_currPlan"
        android:text="@string/text_buttonOthers" />
</RelativeLayout>
</LinearLayout>
